--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -106,6 +106,8 @@
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
+        "!pip install kornia\n",
+        "import kornia\n",
         "!pip install lpips\n",
         "import lpips\n",
         "\n",
@@ -115,6 +117,7 @@
         "%cd aphantasia/\n",
         "from clip_fft import slice_imgs, checkout\n",
         "from utils import pad_up_to, basename, img_list, img_read, plot_text\n",
+        "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
         "!pip install omegaconf>=2.0.0 # pytorch-lightning==1.0.8\n",
@@ -260,7 +263,7 @@
         "os.makedirs(tempdir, exist_ok=True)\n",
         "\n",
         "sideX = 800 #@param {type:\"integer\"}\n",
-        "sideY = 600 #@param {type:\"integer\"}\n",
+        "sideY = 480 #@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "VQGAN_size = 1024 #@param [1024, 16384]\n",
@@ -268,11 +271,13 @@
         "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 300 #@param {type:\"integer\"}\n",
-        "samples = 32 #@param {type:\"integer\"}\n",
+        "samples = 24 #@param {type:\"integer\"}\n",
         "learning_rate = 0.1 #@param {type:\"number\"}\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "\n",
         "#@markdown > Tricks\n",
+        "transform = False #@param {type:\"boolean\"}\n",
+        "sharpness = 0. #@param {type:\"number\"}\n",
         "# no_text = 0.07 #@param {type:\"number\"}\n",
         "# enhance = 0. #@param {type:\"number\"}\n",
         "macro = 0. #@param {type:\"number\"}\n",
@@ -306,14 +311,19 @@
         "    return emb.detach().clone()\n",
         "\n",
         "        \n",
-        "norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
         "sign = 1. if invert is True else -1.\n",
+        "# norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
+        "if transform is True:\n",
+        "  trform_f = transforms.transforms_custom  \n",
+        "  samples = int(samples * 0.95)\n",
+        "else:\n",
+        "  trform_f = transforms.normalize()\n",
         "\n",
         "if upload_image:\n",
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
-        "  in_sliced = slice_imgs([img_in], samples, modsize, transform=norm_in)[0]\n",
+        "  in_sliced = slice_imgs([img_in], samples, modsize, transforms.normalize(), align, micro=False)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    align = 'overscan'\n",
@@ -374,10 +384,15 @@
         "  loss = 0\n",
         "  img_out = vqgan_image(model_vqgan, lats())\n",
         "\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, modsize, norm_in, align, micro=1-macro)\n",
+        "  if sharpness != 0:\n",
+        "    lx = torch.mean(torch.abs(img_out[0,:,:,1:] - img_out[0,:,:,:-1]))\n",
+        "    ly = torch.mean(torch.abs(img_out[0,:,1:,:] - img_out[0,:,:-1,:]))\n",
+        "    loss -= sharpness * (ly+lx)\n",
+        "\n",
+        "  imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)\n",
         "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "#  if diverse != 0:\n",
-        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, norm_in, align, micro=1-macro)\n",
+        "#    imgs_sliced = slice_imgs([vqgan_image(model_vqgan, lats())], samples, modsize, trform_f, align, micro=1-macro)\n",
         "#    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "#    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "#    del out_enc2; torch.cuda.empty_cache()\n",
