new vqgan and more

--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -24,15 +24,15 @@
         "# Illustra: Multi-text to Image\n",
         "\n",
         "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
-        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly) for ideas\n",
+        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [@eduwatch2](https://twitter.com/eduwatch2) for ideas\n",
         "\n",
         "## Features \n",
         "* **continuously processes phrase lists** (e.g. illustrating lyrics)\n",
         "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\n",
-        "* fast convergence\n",
         "* undemanding for RAM - fullHD/4K and above\n",
+        "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
         "* saving/loading FFT snapshots to resume processing\n",
-        "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n"
+        "* separate text prompt for image style\n"
       ]
     },
     {
@@ -55,27 +55,14 @@
       "source": [
         "#@title General setup\n",
         "\n",
-        "import subprocess\n",
-        "CUDA_version = [s for s in subprocess.check_output([\"nvcc\", \"--version\"]).decode(\"UTF-8\").split(\", \") if s.startswith(\"release\")][0].split(\" \")[-1]\n",
-        "print(\"CUDA version:\", CUDA_version)\n",
-        "\n",
-        "if CUDA_version == \"10.0\":\n",
-        "    torch_version_suffix = \"+cu100\"\n",
-        "elif CUDA_version == \"10.1\":\n",
-        "    torch_version_suffix = \"+cu101\"\n",
-        "elif CUDA_version == \"10.2\":\n",
-        "    torch_version_suffix = \"\"\n",
-        "else:\n",
-        "    torch_version_suffix = \"+cu110\"\n",
-        "\n",
-        "!pip install torch==1.7.1{torch_version_suffix} torchvision==0.8.2{torch_version_suffix} -f https://download.pytorch.org/whl/torch_stable.html ftfy regex\n",
+        "!pip install ftfy==5.8 transformers==4.6.0\n",
+        "!pip install gputil\n",
         "\n",
         "try: \n",
         "  !pip3 install googletrans==3.1.0a0\n",
         "  from googletrans import Translator, constants\n",
         "  translator = Translator()\n",
         "except: pass\n",
-        "!pip install ftfy==5.8\n",
         "\n",
         "!apt-get -qq install ffmpeg\n",
         "from google.colab import drive\n",
@@ -116,7 +103,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
-        "!pip install git+https://github.com/openai/CLIP.git\n",
+        "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
@@ -129,7 +116,7 @@
         "!rm -rf aphantasia\n",
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\n",
+        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, derivat, checkout \n",
         "from utils import pad_up_to, basename, file_list, img_list, img_read, txt_clean, plot_text\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
@@ -159,15 +146,18 @@
         "    imageio.imsave('result.jpg', np.array(img))\n",
         "\n",
         "def makevid(seq_dir, size=None):\n",
-        "  # out_sequence = seq_dir + '/%05d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  # !ffmpeg -y -v quiet -i $out_sequence $out_video\n",
         "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
         "\n",
+        "# Hardware check\n",
+        "!ln -sf /opt/bin/nvidia-smi /usr/bin/nvidia-smi\n",
+        "import GPUtil as GPU\n",
+        "gpu = GPU.getGPUs()[0] # XXX: only one GPU on Colab and isn’t guaranteed\n",
         "!nvidia-smi -L\n",
+        "print(\"GPU RAM {0:.0f}MB | Free {1:.0f}MB)\".format(gpu.memoryTotal, gpu.memoryFree))\n",
         "print('\\nDone!')"
       ],
       "execution_count": null,
@@ -181,6 +171,8 @@
       },
       "source": [
         "#@title Upload text file\n",
+        "\n",
+        "style = \"black and white film\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown For non-English languages mark one of:\n",
         "\n",
@@ -202,16 +194,18 @@
       "source": [
         "### Settings\n",
         "Set the desired video resolution and `duration` (in sec).  \n",
+        "Describe `style`, which you'd like to apply to the imagery.  \n",
         "Select CLIP visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
         "\n",
-        "`align` option is about composition. `uniform` is maybe the most stable, `overscan` makes semi-seamless tileable texture.  \n",
+        "`align` option is about composition. `uniform` looks most adequate, `overscan` can make semi-seamless tileable texture.  \n",
+        "`aug_transform` applies some augmentations, inhibiting image fragmentation & \"graffiti\" printing (slower, yet recommended).  \n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
         "Increasing `steps` will elaborate details and make tones smoother, but may start throwing texts like graffiti (and will obviously take more time).  \n",
-        "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up process).  \n",
+        "`show_freq` controls preview frequency (doesn't affect the results; one can set it higher to speed up the process).  \n",
         "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
-        "Try adding `noise_scale` to explore some compositional changes.  \n",
         "\n",
-        "Other tricks:  \n",
+        "Experimental tricks:  \n",
+        "Try augmenting with `noise_scale` to explore some compositional changes.  \n",
         "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt. good start is \\~0.1.   \n",
         "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  \n",
         "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
@@ -234,25 +228,27 @@
         "# drive.mount('/content/GDrive')\n",
         "# clipsDir = '/content/GDrive/MyDrive/T2I ' + dtNow.strftime(\"%Y-%m-%d %H%M\")\n",
         "\n",
+        "style = \"black and white film\" #@param {type:\"string\"}\n",
         "sideX = 1280 #@param {type:\"integer\"}\n",
         "sideY = 720 #@param {type:\"integer\"}\n",
         "duration =  60#@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
+        "aug_transform = True #@param {type:\"boolean\"}\n",
         "keep = 0. #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
         "colors = 1.5 #@param {type:\"number\"}\n",
         "contrast =  0.9#@param {type:\"number\"}\n",
-        "sharpness = 0.3 #@param {type:\"number\"}\n",
-        "noise_scale = 0. #@param {type:\"number\"}\n",
+        "sharpness = 0.2 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
         "learning_rate = .05 #@param {type:\"number\"}\n",
         "show_freq = 10 #@param {type:\"integer\"}\n",
         "#@markdown > Tricks\n",
+        "noise_scale = 0. #@param {type:\"number\"}\n",
         "no_text = 0. #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
         "macro = 0. #@param {type:\"number\"}\n",
@@ -262,17 +258,26 @@
         "fps = 25\n",
         "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "\n",
-        "model_clip, _ = clip.load(model)\n",
+        "use_jit = True if float(torch.__version__[:3]) < 1.8 else False\n",
+        "model_clip, _ = clip.load(model, jit=use_jit)\n",
         "modsize = 288 if model == 'RN50x4' else 224\n",
         "xmem = {'RN50':0.5, 'RN50x4':0.16, 'RN101':0.33}\n",
         "if 'RN' in model:\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
+        "def enc_text(txt):\n",
+        "  if multilang:\n",
+        "    model_lang = SentenceTransformer('clip-ViT-B-32-multilingual-v1').cuda()\n",
+        "    emb = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False).detach().clone()\n",
+        "    del model_lang\n",
+        "  else:\n",
+        "    emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
+        "  return emb.detach().clone()\n",
+        "\n",
         "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
         "        \n",
-        "# norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
-        "if transform is True:\n",
+        "if aug_transform is True:\n",
         "  trform_f = transforms.transforms_custom  \n",
         "  samples = int(samples * 0.95)\n",
         "else:\n",
@@ -283,6 +288,14 @@
         "texts = [tt.strip() for tt in texts if len(tt.strip())>0 and tt[0] != '#']\n",
         "print(' text file:', text_file)\n",
         "print(' total lines:', len(texts))\n",
+        "\n",
+        "if len(style) > 0:\n",
+        "  print(' style:', style)\n",
+        "  if translate:\n",
+        "    translator = Translator()\n",
+        "    style = translator.translate(style, dest='en').text\n",
+        "    print(' translated to:', style) \n",
+        "  txt_enc2 = enc_text(style)\n",
         "\n",
         "workdir = os.path.join(work_dir, basename(text_file))\n",
         "workdir += '-%s' % model if 'RN' in model.upper() else ''\n",
@@ -326,17 +339,12 @@
         "    lr0 = learning_rate\n",
         "  optimizer = torch.optim.Adam(params, lr0)\n",
         "    \n",
-        "  print(' ref text: ', txt)\n",
+        "  print(' topic: ', txt)\n",
         "  if translate:\n",
         "    translator = Translator()\n",
         "    txt = translator.translate(txt, dest='en').text\n",
         "    print(' translated to:', txt)\n",
-        "  if multilang:\n",
-        "      model_lang = SentenceTransformer('clip-ViT-B-32-multilingual-v1').cuda()\n",
-        "      txt_enc = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False).detach().clone()\n",
-        "      del model_lang\n",
-        "  else:\n",
-        "      txt_enc = model_clip.encode_text(clip.tokenize(txt).cuda()).detach().clone()\n",
+        "  txt_enc = enc_text(txt)\n",
         "  if no_text > 0:\n",
         "      txt_plot = torch.from_numpy(plot_text(txt, modsize)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
         "      txt_plot_enc = model_clip.encode_image(txt_plot).detach().clone()\n",
@@ -350,20 +358,19 @@
         "  pbar = ProgressBar(steps) #  // save_freq\n",
         "  for i in range(steps):\n",
         "    loss = 0\n",
-        "    \n",
         "    noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
         "    img_out = image_f(noise)\n",
-        "\n",
-        "    if sharpness != 0:\n",
-        "      lx = torch.mean(torch.abs(img_out[0,:,:,1:] - img_out[0,:,:,:-1]))\n",
-        "      ly = torch.mean(torch.abs(img_out[0,:,1:,:] - img_out[0,:,:-1,:]))\n",
-        "      loss -= sharpness * (ly+lx)\n",
-        "\n",
         "    imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
+        "\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
+        "    if len(style) > 0:\n",
+        "      loss -= 0.5 * torch.cosine_similarity(txt_enc2, out_enc, dim=-1).mean()\n",
         "    if no_text > 0:\n",
-        "        loss += no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
+        "      loss += no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
+        "    if sharpness != 0: # mode = scharr|sobel|default\n",
+        "      loss -= sharpness * derivat(img_out, mode='default')\n",
+        "      # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "    if diverse != 0:\n",
         "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, micro=1-macro)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
@@ -433,8 +440,7 @@
         "    imageio.imsave(os.path.join(tempdir, '%05d.jpg' % (px * vsteps + i)), img)\n",
         "    _ = pbar.upd()\n",
         "\n",
-        "HTML(makevid(tempdir))\n",
-        "\n"
+        "HTML(makevid(tempdir))\n"
       ],
       "execution_count": null,
       "outputs": []
