--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -37,19 +37,18 @@
         "# Text to Image tool\n",
         "\n",
         "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
-        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla) for ideas\n",
+        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla), [@eduwatch2](https://twitter.com/eduwatch2) for ideas\n",
         "\n",
         "## Features \n",
         "* complex requests:\n",
         "  * image and/or text as main prompts  \n",
         "   (composition similarity controlled with [LPIPS](https://github.com/richzhang/PerceptualSimilarity) loss)\n",
-        "  * additional text prompts for fine details and to subtract (avoid) topics\n",
+        "  * separate text prompts for image style and to subtract (suppress) topics\n",
         "  * criteria inversion (show \"the opposite\")\n",
         "\n",
-        "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
         "* generates [FFT-encoded](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) image (massive detailed textures, a la deepdream)\n",
-        "* fast convergence\n",
         "* undemanding for RAM - fullHD/4K and above\n",
+        "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
         "* saving/loading FFT snapshots to resume processing\n"
       ]
     },
@@ -73,27 +72,15 @@
       "source": [
         "#@title General setup\n",
         "\n",
-        "import subprocess\n",
-        "CUDA_version = [s for s in subprocess.check_output([\"nvcc\", \"--version\"]).decode(\"UTF-8\").split(\", \") if s.startswith(\"release\")][0].split(\" \")[-1]\n",
-        "print(\"CUDA version:\", CUDA_version)\n",
-        "\n",
-        "if CUDA_version == \"10.0\":\n",
-        "    torch_version_suffix = \"+cu100\"\n",
-        "elif CUDA_version == \"10.1\":\n",
-        "    torch_version_suffix = \"+cu101\"\n",
-        "elif CUDA_version == \"10.2\":\n",
-        "    torch_version_suffix = \"\"\n",
-        "else:\n",
-        "    torch_version_suffix = \"+cu110\"\n",
-        "\n",
-        "!pip install torch==1.7.1{torch_version_suffix} torchvision==0.8.2{torch_version_suffix} -f https://download.pytorch.org/whl/torch_stable.html ftfy regex\n",
+        "# !pip install torchtext==0.8.0 torch==1.7.1 pytorch-lightning==1.2.2 torchvision==0.8.2 ftfy==5.8 regex\n",
+        "!pip install ftfy==5.8 transformers==4.6.0\n",
+        "!pip install gputil \n",
         "\n",
         "try: \n",
         "  !pip3 install googletrans==3.1.0a0\n",
         "  from googletrans import Translator, constants\n",
         "  translator = Translator()\n",
         "except: pass\n",
-        "!pip install ftfy==5.8\n",
         "\n",
         "import os\n",
         "import io\n",
@@ -121,7 +108,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
-        "!pip install git+https://github.com/openai/CLIP.git\n",
+        "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
         "import clip\n",
         "!pip install sentence_transformers\n",
         "from sentence_transformers import SentenceTransformer\n",
@@ -134,7 +121,7 @@
         "!rm -rf aphantasia\n",
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
-        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, checkout\n",
+        "from clip_fft import to_valid_rgb, fft_image, slice_imgs, derivat, checkout\n",
         "from utils import pad_up_to, basename, img_list, img_read, plot_text\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
@@ -159,7 +146,12 @@
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
         "\n",
+        "# Hardware check\n",
+        "!ln -sf /opt/bin/nvidia-smi /usr/bin/nvidia-smi\n",
+        "import GPUtil as GPU\n",
+        "gpu = GPU.getGPUs()[0]\n",
         "!nvidia-smi -L\n",
+        "print(\"GPU RAM {0:.0f}MB | Free {1:.0f}MB)\".format(gpu.memoryTotal, gpu.memoryFree))\n",
         "print('\\nDone!')"
       ],
       "execution_count": null,
@@ -172,9 +164,8 @@
       },
       "source": [
         "Type some `text` and/or upload some image to start.  \n",
-        "`fine_details` input would make micro details follow that topic.  \n",
+        "Describe `style`, which you'd like to apply to the imagery.  \n",
         "Put to `subtract` the topics, which you would like to avoid in the result.  \n",
-        "*NB: more prompts = more memory! (handled by auto-decreasing `samples` amount, hopefully you don't need to act).*  \n",
         "`invert` the whole criteria, if you want to see \"the totally opposite\".\n",
         "\n",
         "Options for non-English languages (use only one of them!):  \n",
@@ -192,7 +183,7 @@
         "#@title Input\n",
         "\n",
         "text = \"\" #@param {type:\"string\"}\n",
-        "fine_details = \"\" #@param {type:\"string\"}\n",
+        "style = \"black and white film\" #@param {type:\"string\"}\n",
         "subtract = \"\" #@param {type:\"string\"}\n",
         "multilang = False #@param {type:\"boolean\"}\n",
         "translate = False #@param {type:\"boolean\"}\n",
@@ -216,15 +207,16 @@
         "### Settings\n",
         "\n",
         "Select visual `model` (results do vary!). I prefer ViT for consistency (and it's the only native multi-language option).  \n",
-        "`align` option is about composition. `uniform` is maybe the most stable, `overscan` makes semi-seamless tileable texture.  \n",
-        "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity. \n",
-        "\n",
+        "`align` option is about composition. `uniform` looks most adequate, `overscan` can make semi-seamless tileable texture.  \n",
+        "`aug_transform` applies some augmentations, inhibiting image fragmentation & \"graffiti\" printing (slower, yet recommended).  \n",
+        "`sync` value adds LPIPS loss between the output and input image (if there's one), allowing to \"redraw\" it with controlled similarity.  \n",
         "Decrease `samples` if you face OOM (it's the main RAM eater).  \n",
+        "\n",
         "Setting `steps` much higher (1000-..) will elaborate details and make tones smoother, but may start throwing texts like graffiti.  \n",
         "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
         "\n",
-        "Other tricks:  \n",
-        "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt    \n",
+        "Experimental tricks:  \n",
+        "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt  \n",
         "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  \n",
         "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
         "`progressive_grow` may also boost bigger forms creation (especially with lower `learning_rate`); read more [here](https://github.com/eps696/aphantasia/issues/2).  "
@@ -247,13 +239,13 @@
         "#@markdown > Config\n",
         "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
         "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
+        "aug_transform = True #@param {type:\"boolean\"}\n",
         "sync =  0.4 #@param {type:\"number\"}\n",
         "#@markdown > Look\n",
         "decay = 1.5 #@param {type:\"number\"}\n",
         "colors = 1.5 #@param {type:\"number\"}\n",
         "contrast = 0.9 #@param {type:\"number\"}\n",
-        "sharpness = 0.3 #@param {type:\"number\"}\n",
-        "transform = False\n",
+        "sharpness = 0.2 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 300 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -268,13 +260,12 @@
         "diverse = -enhance\n",
         "expand = abs(enhance)\n",
         "\n",
-        "if len(fine_details) > 0:\n",
-        "  samples = int(samples * 0.75)\n",
         "if len(subtract) > 0:\n",
         "  samples = int(samples * 0.75)\n",
         "print(' using %d samples' % samples)\n",
         "\n",
-        "model_clip, _ = clip.load(model)\n",
+        "use_jit = True if float(torch.__version__[:3]) < 1.8 else False\n",
+        "model_clip, _ = clip.load(model, jit=use_jit)\n",
         "modsize = 288 if model == 'RN50x4' else 224\n",
         "xmem = {'RN50':0.5, 'RN50x4':0.16, 'RN101':0.33}\n",
         "if 'RN' in model:\n",
@@ -284,11 +275,11 @@
         "    model_lang = SentenceTransformer('clip-ViT-B-32-multilingual-v1').cuda()\n",
         "\n",
         "def enc_text(txt):\n",
-        "    if multilang is True:\n",
-        "        emb = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False)\n",
-        "    else:\n",
-        "        emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
-        "    return emb.detach().clone()\n",
+        "  if multilang is True:\n",
+        "    emb = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False)\n",
+        "  else:\n",
+        "    emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
+        "  return emb.detach().clone()\n",
         "\n",
         "if diverse != 0:\n",
         "  samples = int(samples * 0.5)\n",
@@ -296,8 +287,7 @@
         "  samples = int(samples * 0.6)\n",
         "        \n",
         "sign = 1. if invert is True else -1.\n",
-        "# norm_in = torchvision.transforms.Normalize((0.48145466, 0.4578275, 0.40821073), (0.26862954, 0.26130258, 0.27577711))\n",
-        "if transform is True:\n",
+        "if aug_transform is True:\n",
         "  trform_f = transforms.transforms_custom  \n",
         "  samples = int(samples * 0.95)\n",
         "else:\n",
@@ -307,7 +297,7 @@
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
-        "  in_sliced = slice_imgs([img_in], samples, modsize, transforms.normalize(), align, micro=False)[0]\n",
+        "  in_sliced = slice_imgs([img_in], samples, modsize, transforms.normalize(), align, micro=1.)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    align = 'overscan'\n",
@@ -320,30 +310,30 @@
         "  del in_sliced; torch.cuda.empty_cache()\n",
         "\n",
         "if len(text) > 0:\n",
-        "  print(' main text:', text)\n",
+        "  print(' main topic:', text)\n",
         "  if translate:\n",
         "    translator = Translator()\n",
         "    text = translator.translate(text, dest='en').text\n",
         "    print(' translated to:', text) \n",
         "  txt_enc = enc_text(text)\n",
         "  if no_text > 0:\n",
-        "      txt_plot = torch.from_numpy(plot_text(text, modsize)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
-        "      txt_plot_enc = model_clip.encode_image(txt_plot).detach().clone()\n",
+        "    txt_plot = torch.from_numpy(plot_text(text, modsize)/255.).unsqueeze(0).permute(0,3,1,2).cuda()\n",
+        "    txt_plot_enc = model_clip.encode_image(txt_plot).detach().clone()\n",
         "\n",
-        "if len(fine_details) > 0:\n",
-        "  print(' micro:', fine_details)\n",
+        "if len(style) > 0:\n",
+        "  print(' style:', style)\n",
         "  if translate:\n",
-        "      translator = Translator()\n",
-        "      fine_details = translator.translate(fine_details, dest='en').text\n",
-        "      print(' translated to:', fine_details) \n",
-        "  txt_enc2 = enc_text(fine_details)\n",
+        "    translator = Translator()\n",
+        "    style = translator.translate(style, dest='en').text\n",
+        "    print(' translated to:', style) \n",
+        "  txt_enc2 = enc_text(style)\n",
         "\n",
         "if len(subtract) > 0:\n",
         "  print(' without:', subtract)\n",
         "  if translate:\n",
-        "      translator = Translator()\n",
-        "      subtract = translator.translate(subtract, dest='en').text\n",
-        "      print(' translated to:', subtract) \n",
+        "    translator = Translator()\n",
+        "    subtract = translator.translate(subtract, dest='en').text\n",
+        "    print(' translated to:', subtract) \n",
         "  txt_enc0 = enc_text(subtract)\n",
         "\n",
         "if multilang is True: del model_lang\n",
@@ -382,42 +372,36 @@
         "def train(i):\n",
         "  loss = 0\n",
         "  img_out = image_f()\n",
+        "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
+        "  out_enc = model_clip.encode_image(img_sliced)\n",
         "\n",
-        "  if sharpness != 0:\n",
-        "    lx = torch.mean(torch.abs(img_out[0,:,:,1:] - img_out[0,:,:,:-1]))\n",
-        "    ly = torch.mean(torch.abs(img_out[0,:,1:,:] - img_out[0,:,:-1,:]))\n",
-        "    loss -= sharpness * (ly+lx)\n",
-        "\n",
-        "  micro = False if len(fine_details) > 0 else 1-macro\n",
-        "  imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=micro)\n",
-        "  out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
+        "  if len(text) > 0: # input text\n",
+        "    loss += sign * torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
+        "    if no_text > 0:\n",
+        "      loss -= sign * no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
+        "  if len(style) > 0: # input text - style\n",
+        "    loss += sign * 0.5 * torch.cosine_similarity(txt_enc2, out_enc, dim=-1).mean()\n",
+        "  if len(subtract) > 0: # subtract text\n",
+        "    loss -= sign * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
+        "  if upload_image:\n",
+        "    loss += sign * 0.5 * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
+        "  if sync > 0 and upload_image: # image composition sync\n",
+        "    prog_sync = (steps - i) / steps \n",
+        "    loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
+        "  if sharpness != 0: # mode = scharr|sobel|default\n",
+        "    loss -= sharpness * derivat(img_out, mode='default')\n",
+        "    # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "  if diverse != 0:\n",
-        "    imgs_sliced = slice_imgs([image_f()], samples, modsize, trform_f, align, micro=micro)\n",
-        "    out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
+        "    img_sliced = slice_imgs([image_f()], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
+        "    out_enc2 = model_clip.encode_image(img_sliced)\n",
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "    del out_enc2; torch.cuda.empty_cache()\n",
-        "  if upload_image:\n",
-        "      loss += sign * 0.5 * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
-        "  if len(text) > 0: # input text\n",
-        "      loss += sign * torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
-        "      if no_text > 0:\n",
-        "          loss -= sign * no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
-        "  if len(subtract) > 0: # subtract text\n",
-        "      loss += -sign * torch.cosine_similarity(txt_enc0, out_enc, dim=-1).mean()\n",
-        "  if sync > 0 and upload_image: # image composition sync\n",
-        "      prog_sync = (steps - i) / steps \n",
-        "      loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
-        "  if len(fine_details) > 0: # input text for micro details\n",
-        "      imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=True)\n",
-        "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
-        "      loss += sign * torch.cosine_similarity(txt_enc2, out_enc2, dim=-1).mean()\n",
-        "      del out_enc2; torch.cuda.empty_cache()\n",
         "  if expand > 0:\n",
         "    global prev_enc\n",
         "    if i > 0:\n",
         "      loss += expand * torch.cosine_similarity(out_enc, prev_enc, dim=-1).mean()\n",
         "    prev_enc = out_enc.detach()\n",
-        "  del img_out, imgs_sliced, out_enc; torch.cuda.empty_cache()\n",
+        "  del img_out, img_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
         "  if progressive_grow is True:\n",
         "    lr_cur = lr0 + (i / steps) * (lr1 - lr0)\n",
