--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -239,7 +239,7 @@
         "decay = 1.5 #@param {type:\"number\"}\n",
         "colors = 1.5 #@param {type:\"number\"}\n",
         "contrast =  0.9#@param {type:\"number\"}\n",
-        "sharpness = 0.2 #@param {type:\"number\"}\n",
+        "sharpness = 0.3 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 200 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -367,7 +367,7 @@
         "    if no_text > 0:\n",
         "      loss += no_text * torch.cosine_similarity(txt_plot_enc, out_enc, dim=-1).mean()\n",
         "    if sharpness != 0: # mode = scharr|sobel|default\n",
-        "      loss -= sharpness * derivat(img_out, mode='default')\n",
+        "      loss -= sharpness * derivat(img_out, mode='sobel')\n",
         "      # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "    if diverse != 0:\n",
         "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, micro=1-macro)\n",
@@ -394,7 +394,7 @@
         "      with torch.no_grad():\n",
         "        img = image_f(contrast=contrast).cpu().numpy()[0]\n",
         "      if sharpness != 0:\n",
-        "        img = img **1.3 # empirical tone mapping\n",
+        "        img = img ** (1 + sharpness/2.) # empirical tone mapping\n",
         "      save_img(img, os.path.join(tempdir, '%05d.jpg' % (i // show_freq)))\n",
         "      outpic.clear_output()\n",
         "      with outpic:\n",
