--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -245,7 +245,7 @@
         "decay = 1.5 #@param {type:\"number\"}\n",
         "colors = 1.5 #@param {type:\"number\"}\n",
         "contrast = 0.9 #@param {type:\"number\"}\n",
-        "sharpness = 0.2 #@param {type:\"number\"}\n",
+        "sharpness = 0.3 #@param {type:\"number\"}\n",
         "#@markdown > Training\n",
         "steps = 300 #@param {type:\"integer\"}\n",
         "samples = 200 #@param {type:\"integer\"}\n",
@@ -361,8 +361,11 @@
         "def checkout(num):\n",
         "  with torch.no_grad():\n",
         "    img = image_f(contrast=contrast).cpu().numpy()[0]\n",
-        "    if (sync > 0 and upload_image) or sharpness != 0:\n",
-        "      img = img **1.3 # empirical tone mapping\n",
+        "    # empirical tone mapping\n",
+        "    if sync > 0 and upload_image:\n",
+        "      img = img **1.3 \n",
+        "    if sharpness != 0:\n",
+        "      img = img ** (1 + sharpness/2.)\n",
         "  save_img(img, os.path.join(tempdir, '%04d.jpg' % num))\n",
         "  outpic.clear_output()\n",
         "  with outpic:\n",
@@ -389,7 +392,7 @@
         "    prog_sync = (steps - i) / steps \n",
         "    loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
         "  if sharpness != 0: # mode = scharr|sobel|default\n",
-        "    loss -= sharpness * derivat(img_out, mode='default')\n",
+        "    loss -= sharpness * derivat(img_out, mode='sobel')\n",
         "    # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "  if diverse != 0:\n",
         "    img_sliced = slice_imgs([image_f()], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
