--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -203,13 +203,11 @@
         "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
         "\n",
         "Experimental tricks:  \n",
-        "Try augmenting with `noise_scale` to explore some compositional changes.  \n",
-        "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt. good start is \\~0.1.   \n",
+        "`aug_noise` augmentation, `macro` (from 0 to 1) and `progressive_grow` (read more [here](https://github.com/eps696/aphantasia/issues/2)) may boost bigger forms, making composition less disperse.  \n",
+        "`no_text` tries to remove \"graffiti\" by subtracting plotted text prompt. good start is \\~0.1.   \n",
         "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  \n",
-        "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
-        "`progressive_grow` may also boost bigger forms creation (especially with lower `learning_rate`), see more [here](https://github.com/eps696/aphantasia/issues/2).   \n",
         "\n",
-        "`--keep X` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \n",
+        "NB: `keep` parameter controls how well the next line/image generation follows the previous. By default X = 0, and every frame is produced independently (i.e. randomly initiated). \n",
         "Setting it higher starts each generation closer to the average of previous runs, effectively keeping macro compositions more similar and the transitions smoother. Safe values are < 0.5 (higher numbers may cause the imagery getting stuck). This behaviour depends on the input, so test with your prompts and see what's better in your case."
       ]
     },
@@ -246,7 +244,7 @@
         "learning_rate = .05 #@param {type:\"number\"}\n",
         "show_freq = 10 #@param {type:\"integer\"}\n",
         "#@markdown > Tricks\n",
-        "noise_scale = 0. #@param {type:\"number\"}\n",
+        "aug_noise = 0.2 #@param {type:\"number\"}\n",
         "no_text = 0. #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
         "macro = 0. #@param {type:\"number\"}\n",
@@ -356,7 +354,7 @@
         "  pbar = ProgressBar(steps) #  // save_freq\n",
         "  for i in range(steps):\n",
         "    loss = 0\n",
-        "    noise = noise_scale * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if noise_scale > 0 else 0.\n",
+        "    noise = aug_noise * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if aug_noise > 0 else 0.\n",
         "    img_out = image_f(noise)\n",
         "    imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
