--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -183,7 +183,7 @@
         "#@title Input\n",
         "\n",
         "text = \"\" #@param {type:\"string\"}\n",
-        "style = \"black and white film\" #@param {type:\"string\"}\n",
+        "style = \"\" #@param {type:\"string\"}\n",
         "subtract = \"\" #@param {type:\"string\"}\n",
         "multilang = False #@param {type:\"boolean\"}\n",
         "translate = False #@param {type:\"boolean\"}\n",
@@ -216,10 +216,9 @@
         "Tune `decay` (compositional softness) and `sharpness`, `colors` (saturation) and `contrast` as needed.  \n",
         "\n",
         "Experimental tricks:  \n",
-        "`no_text X` tries to remove \"graffiti\" by subtracting plotted text prompt  \n",
-        "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  \n",
-        "`--macro X` (from 0 to 1) endorses bigger forms (less disperse composition). should not be too close to 1.  \n",
-        "`progressive_grow` may also boost bigger forms creation (especially with lower `learning_rate`); read more [here](https://github.com/eps696/aphantasia/issues/2).  "
+        "`aug_noise` augmentation, `macro` (from 0 to 1) and `progressive_grow` (read more [here](https://github.com/eps696/aphantasia/issues/2)) may boost bigger forms, making composition less disperse.  \n",
+        "`no_text` tries to remove \"graffiti\" by subtracting plotted text prompt  \n",
+        "`enhance` boosts training consistency (of simultaneous samples) and steps progress. good start is 0.1~0.2.  "
       ]
     },
     {
@@ -252,6 +251,7 @@
         "learning_rate = .05 #@param {type:\"number\"}\n",
         "save_freq = 1 #@param {type:\"integer\"}\n",
         "#@markdown > Tricks\n",
+        "aug_noise = 0.2 #@param {type:\"number\"}\n",
         "no_text = 0.07 #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
         "macro = 0. #@param {type:\"number\"}\n",
@@ -374,7 +374,8 @@
         "prev_enc = 0\n",
         "def train(i):\n",
         "  loss = 0\n",
-        "  img_out = image_f()\n",
+        "  noise = aug_noise * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if aug_noise > 0 else None\n",
+        "  img_out = image_f(noise)\n",
         "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
         "  out_enc = model_clip.encode_image(img_sliced)\n",
         "\n",
@@ -395,7 +396,7 @@
         "    loss -= sharpness * derivat(img_out, mode='sobel')\n",
         "    # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "  if diverse != 0:\n",
-        "    img_sliced = slice_imgs([image_f()], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
+        "    img_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
         "    out_enc2 = model_clip.encode_image(img_sliced)\n",
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "    del out_enc2; torch.cuda.empty_cache()\n",
