--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -36,6 +36,7 @@
       "source": [
         "# Text to Image tool\n",
         "\n",
+        "The part of [Aphantasia](https://github.com/eps696/aphantasia) series.  \n",
         "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
         "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla), [@eduwatch2](https://twitter.com/eduwatch2) for ideas\n",
         "\n",
