--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -23,8 +23,9 @@
       "source": [
         "# Illustra: Multi-text to Image\n",
         "\n",
+        "The part of [Aphantasia](https://github.com/eps696/aphantasia) series.  \n",
         "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent) // made by [eps696](https://github.com/eps696) [Vadim Epstein]  \n",
-        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [@eduwatch2](https://twitter.com/eduwatch2) for ideas\n",
+        "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [@eduwatch2](https://twitter.com/eduwatch2) for ideas.\n",
         "\n",
         "## Features \n",
         "* **continuously processes phrase lists** (e.g. illustrating lyrics)\n",
