--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -298,7 +298,7 @@
         "  in_img = list(uploaded.values())[0]\n",
         "  print(' image:', list(uploaded)[0])\n",
         "  img_in = torch.from_numpy(imageio.imread(in_img).astype(np.float32)/255.).unsqueeze(0).permute(0,3,1,2).cuda()[:,:3,:,:]\n",
-        "  in_sliced = slice_imgs([img_in], samples, modsize, transforms.normalize(), align, micro=1.)[0]\n",
+        "  in_sliced = slice_imgs([img_in], samples, modsize, transforms.normalize(), align)[0]\n",
         "  img_enc = model_clip.encode_image(in_sliced).detach().clone()\n",
         "  if sync > 0:\n",
         "    align = 'overscan'\n",
@@ -377,7 +377,7 @@
         "  loss = 0\n",
         "  noise = aug_noise * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if aug_noise > 0 else None\n",
         "  img_out = image_f(noise)\n",
-        "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
+        "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, macro=macro)[0]\n",
         "  out_enc = model_clip.encode_image(img_sliced)\n",
         "\n",
         "  if len(text) > 0: # input text\n",
@@ -397,7 +397,7 @@
         "    loss -= sharpness * derivat(img_out, mode='sobel')\n",
         "    # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "  if diverse != 0:\n",
-        "    img_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, micro=1-macro)[0]\n",
+        "    img_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, macro=macro)[0]\n",
         "    out_enc2 = model_clip.encode_image(img_sliced)\n",
         "    loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "    del out_enc2; torch.cuda.empty_cache()\n",
