--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -357,7 +357,7 @@
         "    loss = 0\n",
         "    noise = aug_noise * torch.randn(1, 1, *params[0].shape[2:4], 1).cuda() if aug_noise > 0 else 0.\n",
         "    img_out = image_f(noise)\n",
-        "    imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, micro=1-macro)\n",
+        "    imgs_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, macro=macro)\n",
         "    out_enc = model_clip.encode_image(imgs_sliced[-1])\n",
         "\n",
         "    loss -= torch.cosine_similarity(txt_enc, out_enc, dim=-1).mean()\n",
@@ -369,7 +369,7 @@
         "      loss -= sharpness * derivat(img_out, mode='sobel')\n",
         "      # loss -= sharpness * derivat(img_sliced, mode='scharr')\n",
         "    if diverse != 0:\n",
-        "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, micro=1-macro)\n",
+        "      imgs_sliced = slice_imgs([image_f(noise)], samples, modsize, trform_f, align, macro=macro)\n",
         "      out_enc2 = model_clip.encode_image(imgs_sliced[-1])\n",
         "      loss += diverse * torch.cosine_similarity(out_enc, out_enc2, dim=-1).mean()\n",
         "      del out_enc2; torch.cuda.empty_cache()\n",
