--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -404,7 +404,7 @@
         "\n",
         "if multilang: del model_lang\n",
         "\n",
-        "optimizer = torch.optim.Adam(lats.parameters(), learning_rate)\n",
+        "optimizer = torch.optim.AdamW(lats.parameters(), learning_rate, weight_decay=wd, amsgrad=True)\n",
         "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
