--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -334,7 +334,7 @@
         "    lr0 = lr1 * 0.01\n",
         "  else:\n",
         "    lr0 = learning_rate\n",
-        "  optimizer = torch.optim.Adam(params, lr0)\n",
+        "  optimizer = torch.optim.AdamW(params, lr0, weight_decay=wd, amsgrad=True)\n",
         "    \n",
         "  print(' topic: ', txt)\n",
         "  if translate:\n",
