--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -349,7 +349,7 @@
         "  lr0 = lr1 * 0.01\n",
         "else:\n",
         "  lr0 = learning_rate\n",
-        "optimizer = torch.optim.AdamW(params, lr0, weight_decay=wd, amsgrad=True)\n",
+        "optimizer = torch.optim.AdamW(params, lr0, weight_decay=0.01, amsgrad=True)\n",
         "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
