--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -289,7 +289,7 @@
         "        \n",
         "sign = 1. if invert is True else -1.\n",
         "if aug_transform is True:\n",
-        "  trform_f = transforms.transforms_custom  \n",
+        "  trform_f = transforms.transforms_elastic\n",
         "  samples = int(samples * 0.95)\n",
         "else:\n",
         "  trform_f = transforms.normalize()\n",
