--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -248,7 +248,7 @@
         "aug_noise = 0.2 #@param {type:\"number\"}\n",
         "no_text = 0. #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
-        "macro = 0. #@param {type:\"number\"}\n",
+        "macro = 0.4 #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
         "diverse = -enhance\n",
         "expand = abs(enhance)\n",
