--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -255,7 +255,7 @@
         "aug_noise = 0.2 #@param {type:\"number\"}\n",
         "no_text = 0.07 #@param {type:\"number\"}\n",
         "enhance = 0. #@param {type:\"number\"}\n",
-        "macro = 0. #@param {type:\"number\"}\n",
+        "macro = 0.4 #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
         "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "diverse = -enhance\n",
