--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -309,7 +309,7 @@
         "sideX = 900 #@param {type:\"integer\"}\n",
         "sideY =  500#@param {type:\"integer\"}\n",
         "#@markdown > Config\n",
-        "model = 'ViT-B/32' #@param ['ViT-B/32', 'RN101', 'RN50x4', 'RN50']\n",
+        "model = 'ViT-B/16' #@param ['ViT-B/16', 'ViT-B/32', 'RN101', 'RN50x16', 'RN50x4', 'RN50']\n",
         "align = 'uniform' #@param ['central', 'uniform', 'overscan']\n",
         "aug_transform = True #@param {type:\"boolean\"}\n",
         "sync =  0.4 #@param {type:\"number\"}\n",
@@ -340,8 +340,8 @@
         "\n",
         "use_jit = True if float(torch.__version__[:3]) < 1.8 else False\n",
         "model_clip, _ = clip.load(model, jit=use_jit)\n",
-        "modsize = 288 if model == 'RN50x4' else 224\n",
-        "xmem = {'RN50':0.5, 'RN50x4':0.16, 'RN101':0.33}\n",
+        "modsize = model_clip.visual.input_resolution\n",
+        "xmem = {'RN50':0.5, 'RN50x4':0.16, 'RN50x16':0.06, 'RN101':0.33}\n",
         "if 'RN' in model:\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
