new models config

--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -341,8 +341,8 @@
         "use_jit = True if float(torch.__version__[:3]) < 1.8 else False\n",
         "model_clip, _ = clip.load(model, jit=use_jit)\n",
         "modsize = model_clip.visual.input_resolution\n",
-        "xmem = {'RN50':0.5, 'RN50x4':0.16, 'RN50x16':0.06, 'RN101':0.33}\n",
-        "if 'RN' in model:\n",
+        "xmem = {'ViT-B/16':0.25, 'RN50':0.5, 'RN50x4':0.16, 'RN50x16':0.06, 'RN101':0.33}\n",
+        "if model in xmem.keys():\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
         "if multilang:\n",
