Revert "hw mp4 encoding"
This reverts commit e10d38743655e3089da195a0f82fe16355e0ff78.

--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -219,7 +219,7 @@
         "\n",
         "def makevid(seq_dir, size=None):\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, codec='nvenc', verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
+        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
