--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -142,7 +142,7 @@
         "  # out_sequence = seq_dir + '/%05d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
         "  # !ffmpeg -y -v quiet -i $out_sequence $out_video\n",
-        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, codec='nvenc', verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
+        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
