hw ffmpeg encoding

--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -75,7 +75,7 @@
         "\n",
         "# !pip install torchtext==0.8.0 torch==1.7.1 pytorch-lightning==1.2.2 torchvision==0.8.2 ftfy==5.8 regex\n",
         "!pip install ftfy==5.8 transformers==4.6.0\n",
-        "!pip install gputil \n",
+        "!pip install gputil ffpb \n",
         "\n",
         "try: \n",
         "  !pip3 install googletrans==3.1.0a0\n",
@@ -92,7 +92,7 @@
         "import numpy as np\n",
         "import PIL\n",
         "from base64 import b64encode\n",
-        "import moviepy, moviepy.editor\n",
+        "# import moviepy, moviepy.editor\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -123,12 +123,9 @@
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
         "from clip_fft import to_valid_rgb, fft_image, slice_imgs, derivat, checkout\n",
-        "from utils import pad_up_to, basename, img_list, img_read, plot_text\n",
+        "from utils import pad_up_to, basename, img_list, img_read, plot_text, txt_clean\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
-        "\n",
-        "workdir = '_out'\n",
-        "tempdir = os.path.join(workdir, 'ttt')\n",
         "\n",
         "clear_output()\n",
         "\n",
@@ -139,10 +136,10 @@
         "  params_pt = torch.load(io.BytesIO(params_pt))\n",
         "\n",
         "def makevid(seq_dir, size=None):\n",
-        "  # out_sequence = seq_dir + '/%05d.jpg'\n",
+        "  out_sequence = seq_dir + '/%04d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  # !ffmpeg -y -v quiet -i $out_sequence $out_video\n",
-        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
+        "  !ffpb -y -i $out_sequence -codec nvenc $out_video\n",
+        "  # moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
@@ -194,7 +191,10 @@
         "if translate:\n",
         "  text = translator.translate(text, dest='en').text\n",
         "if upload_image:\n",
-        "  uploaded = files.upload()"
+        "  uploaded = files.upload()\n",
+        "\n",
+        "workdir = '_out'\n",
+        "tempdir = os.path.join(workdir, '%s-%s' % (txt_clean(text)[:50], txt_clean(style)[:50]))"
       ],
       "execution_count": null,
       "outputs": []
