--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -95,7 +95,7 @@
         "import PIL\n",
         "from collections import OrderedDict\n",
         "from base64 import b64encode\n",
-        "import moviepy, moviepy.editor\n",
+        "from moviepy.editor import ImageSequenceClip\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -126,7 +126,7 @@
         "!git clone https://github.com/eps696/aphantasia\n",
         "%cd aphantasia/\n",
         "from clip_fft import slice_imgs\n",
-        "from utils import pad_up_to, basename, img_list, img_read, plot_text\n",
+        "from utils import pad_up_to, basename, img_list, img_read, plot_text, txt_clean\n",
         "import transforms\n",
         "from progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
@@ -172,9 +172,6 @@
         "  getm('https://heibox.uni-heidelberg.de/f/867b05fc8c4841768640/?dl=1', '/content/models_TT/imagenet_f16-16384.ckpt')\n",
         "  getm('https://heibox.uni-heidelberg.de/f/274fb24ed38341bfa753/?dl=1', '/content/models_TT/imagenet_f16-16384.yaml')\n",
         "\n",
-        "workdir = '_out'\n",
-        "tempdir = os.path.join(workdir, 'ttt')\n",
-        "\n",
         "clear_output()\n",
         "\n",
         "if resume:\n",
@@ -219,7 +216,7 @@
         "\n",
         "def makevid(seq_dir, size=None):\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
+        "  ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
@@ -271,7 +268,10 @@
         "if translate:\n",
         "  text = translator.translate(text, dest='en').text\n",
         "if upload_image:\n",
-        "  uploaded = files.upload()"
+        "  uploaded = files.upload()\n",
+        "\n",
+        "workdir = '_out'\n",
+        "tempdir = os.path.join(workdir, '%s-%s' % (txt_clean(text)[:50], txt_clean(style)[:50]))"
       ],
       "execution_count": null,
       "outputs": []
