--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -57,7 +57,7 @@
         "#@title General setup\n",
         "\n",
         "!pip install ftfy==5.8 transformers==4.6.0\n",
-        "!pip install gputil\n",
+        "!pip install gputil ffpb \n",
         "\n",
         "try: \n",
         "  !pip3 install googletrans==3.1.0a0\n",
@@ -87,7 +87,7 @@
         "import PIL\n",
         "from base64 import b64encode\n",
         "import shutil\n",
-        "import moviepy, moviepy.editor\n",
+        "# import moviepy, moviepy.editor\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -147,8 +147,10 @@
         "    imageio.imsave('result.jpg', np.array(img))\n",
         "\n",
         "def makevid(seq_dir, size=None):\n",
+        "  out_sequence = seq_dir + '/%05d.jpg'\n",
         "  out_video = seq_dir + '.mp4'\n",
-        "  moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False) # , ffmpeg_params=ffmpeg_params, logger=None\n",
+        "  !ffpb -y -i $out_sequence -codec nvenc $out_video\n",
+        "  # moviepy.editor.ImageSequenceClip(img_list(seq_dir), fps=25).write_videofile(out_video, verbose=False)\n",
         "  data_url = \"data:video/mp4;base64,\" + b64encode(open(out_video,'rb').read()).decode()\n",
         "  wh = '' if size is None else 'width=%d height=%d' % (size, size)\n",
         "  return \"\"\"<video %s controls><source src=\"%s\" type=\"video/mp4\"></video>\"\"\" % (wh, data_url)\n",
@@ -409,7 +411,7 @@
         "\n",
         "  torch.save(params[0], '%s.pt' % os.path.join(workdir, out_name))\n",
         "  # shutil.copy(img_list(tempdir)[-1], os.path.join(workdir, '%s-%d.jpg' % (out_name, steps)))\n",
-        "  # os.system('ffmpeg -v warning -y -i %s\\%%05d.jpg \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
+        "  # os.system('ffmpeg -v warning -y -i %s\\%%05d.jpg -codec nvenc \"%s.mp4\"' % (tempdir, os.path.join(workdir, out_name)))\n",
         "  # HTML(makevid(tempdir))\n",
         "\n",
         "for i, txt in enumerate(texts):\n",
